--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -18,10 +18,161 @@ h1 {
 	font-weight: bold;
 }
 
+
 .container {
 	margin: 2em auto;
 	max-width: 630px;
 	text-align: center;
+
+}
+
+.container2 {
+	margin: 2em auto;
+	max-width: 300px;
+	text-align: center;
+
+}
+
+
+.answer {
+  color: #FFF;
+  height:30px;
+	padding:10px;
+	padding-bottom: 30px;
+  font-size: 14px;
+  text-align: center;
+  position: relative;
+  margin: 10px;
+  top: 40px;
+  border: 1px solid #466995;
+  background: 	rgb(40,40,40);
+	color: #777;
+
+}
+.answer:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 85%;
+	width: 0;
+	height: 0;
+	border: 13px solid transparent;
+	border-top-color: rgb(40,40,40);
+	border-bottom: 0;
+	margin-left: -30px;
+	margin-bottom: -10px;
+
+
+}
+.w3-light-grey{
+  position: relative;
+  border: 1px solid #777;
+  margin: 10px;
+  background: 	#eaeaea;
+  top: 45px;
+}
+.w3-grey{
+  border: 1px solid #777;
+  margin: 0px;
+  background: 	#EF5F3C;
+  height:24px;
+  width:80%
+}
+.blurb{
+  border: 1px solid #777;
+  margin: 10px;
+  height:300px;
+  position: relative;
+  top: 35px;
+}
+.blurby{
+  margin: 30px;
+	text-align: left;
+
+}
+.oc{
+  color: #EF5F3C;
+}
+.dg{
+  weight:bold;
+}
+
+p{
+  font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+  font-size: 14px;
+color:#777;
+
+}
+.currencyinput {
+    position: relative;
+    background-color: #fff;
+    display: inline;
+    margin: 30px;
+    margin-right: 0px;
+    padding: 0 0 0 0;
+    text-align: right;
+		margin-left: 20px;
+
+
+}
+
+.currencyinput:before {
+    content: '$';
+    position: absolute;
+    top: 0;
+    left: 40px;
+    z-index: 1;
+    margin-left: -15px;
+    text-align: right;
+    color: #777;
+}
+input{
+  font-size: 20px;
+  width: 40%;
+  height: 40px;
+  text-align: center;
+
+  font-family: "rooney-web", "AmericanTypewriter", Rockwell, serif;
+  font-weight: 400;
+	border-width: 1px;
+	border-radius: 3px;
+	border-style: solid;
+	border-color: #777;
+}
+.letsGo{
+	background-color: green;
+	color: #fff;
+	margin-left:0px;
+	margin-right: 20px;
+
+}
+#button1 , #button2 {
+display:inline-block;
+width: 125px;
+height: 40px;
+border-radius: 3px;
+margin-top:40px;
+margin-left: 10px;
+margin-right: 10px;
+font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+font-size: 14px;
+color:#777;
+background-color: #eaeaea;
+font-weight: bold;
+}
+
+.oc2{
+  color: #fff;
+}
+.theLink{
+  margin:10px;
+	float:left;
+	top: 50px;
+	padding-left: 10px;
+	padding-top: -50px;
+	text-decoration: none;
+	color:#20A1D4;
+
 }
 
 /* The following font information and color codes are provided for you.  They do not match the prototype exactly, but they are fine to use for the assignment and doing so does not count against you.  They are simply meant to help you save time.  We would like everyone to have as close to a pixel-perfect match to the prototype as possible.  If you do find a font/color that matches more precisely, please share it with the team so we can improve the activity for future applicants.  Thank you!  Happy coding!
